fixes in integration tests, config, kafka topic subscribers and other bugfixes